[FIX] mail: align margins of activity list in chatter
This commit changes the activity component sidebar structure to match
the message sidebar's.
This is done to make sure the avatars in the chatter are all
horizontally aligned.
This commit also adds padding to the Activities separator/dropdown to
align with the messages date separator.

closes odoo/odoo#211463

--- a/addons/mail/static/src/core/web/activity.scss
+++ b/addons/mail/static/src/core/web/activity.scss
@@ -1,4 +1,9 @@
 .o-mail-Activity-sidebar {
+    flex-basis: $o-mail-Message-sidebarWidth;
+    max-width: $o-mail-Message-sidebarWidth;
+}
+
+.o-mail-Activity-avatarContainer {
     width: $o-mail-Avatar-size;
     height: $o-mail-Avatar-size;
 }
